[gd_scene load_steps=4 format=3 uid="uid://dkuh8crjc04oy"]

[ext_resource type="Script" uid="uid://c2g1oilf50ggm" path="res://GameModes/Enemies.gd" id="1_l6ngv"]
[ext_resource type="Texture2D" uid="uid://cotocdbo057g5" path="res://Assets/Static/Mouse.png" id="2_6nro6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rsroh"]
radius = 10.714287

[node name="enemies" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6ngv")

[node name="chaserLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="enemySpawn1" type="Node2D" parent="chaserLayer"]
position = Vector2(39, 606)

[node name="enemySpawn2" type="Node2D" parent="chaserLayer"]
position = Vector2(1100, 604)

[node name="enemySpawn3" type="Node2D" parent="chaserLayer"]
position = Vector2(579, 604)

[node name="enemySpawn4" type="Node2D" parent="chaserLayer"]
position = Vector2(280, 605)

[node name="enemySpawn5" type="Node2D" parent="chaserLayer"]
position = Vector2(813, 605)

[node name="mouseLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="mouseHitbox" type="Area2D" parent="mouseLayer"]
top_level = true
z_index = 10
z_as_relative = false
position = Vector2(30, -42)

[node name="collisionShape2d" type="CollisionShape2D" parent="mouseLayer/mouseHitbox"]
position = Vector2(6.9999995, 12.999999)
rotation = -0.33330753
scale = Vector2(0.9263611, 1.04)
shape = SubResource("CapsuleShape2D_rsroh")

[node name="textureRect" type="TextureRect" parent="mouseLayer/mouseHitbox"]
texture_filter = 1
offset_left = -3.0
offset_top = -3.0
offset_right = 22.0
offset_bottom = 26.0
mouse_filter = 2
texture = ExtResource("2_6nro6")
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="mouseLayer/mouseHitbox" to="." method="_on_mouse_hitbox_area_entered"]
